--- a/src/Shared/Evolutio.Exception/ResourceMessagesException.resx
+++ b/src/Shared/Evolutio.Exception/ResourceMessagesException.resx
@@ -129,6 +129,15 @@
   <data name="EXPIRED_SESSION" xml:space="preserve">
     <value>Your session has expired. Please log in again to continue.</value>
   </data>
+  <data name="NAME_EMPTY" xml:space="preserve">
+    <value>Name cannot be empty.</value>
+  </data>
+  <data name="PASSWORD_EMPTY" xml:space="preserve">
+    <value>Password empty.</value>
+  </data>
+  <data name="PASSWORD_INVALID" xml:space="preserve">
+    <value>The password is less than 6 characters long.</value>
+  </data>
   <data name="UNKNOWN_ERROR" xml:space="preserve">
     <value>Unknown error.</value>
   </data>
