feat: implemented the use case to search for user by id and unit test for the use case

--- a/src/Shared/Evolutio.Exception/ResourceMessagesException.pt-BR.resx
+++ b/src/Shared/Evolutio.Exception/ResourceMessagesException.pt-BR.resx
@@ -141,6 +141,9 @@
   <data name="UNKNOWN_ERROR" xml:space="preserve">
     <value>Erro desconhecido.</value>
   </data>
+  <data name="USER_NOT_FOUND" xml:space="preserve">
+    <value>Usuário não encontrado.</value>
+  </data>
   <data name="USER_WITHOUT_PERMISSION_ACCESS_RESOURCE" xml:space="preserve">
     <value>O usuário não tem permissão para acessar esse recurso.</value>
   </data>
