--- a/src/Shared/Evolutio.Exception/ResourceMessagesException.resx
+++ b/src/Shared/Evolutio.Exception/ResourceMessagesException.resx
@@ -141,6 +141,9 @@
   <data name="UNKNOWN_ERROR" xml:space="preserve">
     <value>Unknown error.</value>
   </data>
+  <data name="USER_NOT_FOUND" xml:space="preserve">
+    <value>User not found.</value>
+  </data>
   <data name="USER_WITHOUT_PERMISSION_ACCESS_RESOURCE" xml:space="preserve">
     <value>The user does not have permission to access this resource.</value>
   </data>
