--- a/src/Shared/Evolutio.Exception/ResourceMessagesException.pt-BR.resx
+++ b/src/Shared/Evolutio.Exception/ResourceMessagesException.pt-BR.resx
@@ -126,6 +126,9 @@
   <data name="EMAIL_INVALID" xml:space="preserve">
     <value>O e-mail não é válido.</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>E-mail e/ou senha inválidos.</value>
+  </data>
   <data name="EXPIRED_SESSION" xml:space="preserve">
     <value>Sua sessão expirou. Faça login novamente para continuar.</value>
   </data>
