feat: added no token message exception

--- a/src/Shared/Evolutio.Exception/ResourceMessagesException.pt-BR.resx
+++ b/src/Shared/Evolutio.Exception/ResourceMessagesException.pt-BR.resx
@@ -138,6 +138,9 @@
   <data name="NAME_EMPTY" xml:space="preserve">
     <value>O nome não pode estar vazio.</value>
   </data>
+  <data name="NO_TOKEN" xml:space="preserve">
+    <value>É necessário um Token.</value>
+  </data>
   <data name="PASSWORD_EMPTY" xml:space="preserve">
     <value>Senha vazia.</value>
   </data>
